fr3_mujoco_ws/log/build_2025-05-23_15-47-24/franka_mujoco_controller/stderr.log
  File "/media/kai/Kai_Backup/Study/Master_Thesis/My_Master_Thesis/PD_with_object_franka_mujoco_ws/install/franka_mujoco_controller/lib/python3.10/site-packages/franka_mujoco_controller/manual_push_control.py", line 45
    self.get_logger().info('# Object Pushing PD Controller for Franka FR3
                           ^
SyntaxError: unterminated string literal (detected at line 45)

